compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program_all
Rule 1     program_all -> procedures main
Rule 2     procedures -> procedures PROCEDURE proc_head IS declarations IN commands END
Rule 3     procedures -> procedures PROCEDURE proc_head IS IN commands END
Rule 4     procedures -> empty
Rule 5     proc_head -> PIDENTIFIER LPAREN args_decl RPAREN
Rule 6     args_decl -> args_decl COMMA PIDENTIFIER
Rule 7     args_decl -> args_decl COMMA T PIDENTIFIER
Rule 8     args_decl -> PIDENTIFIER
Rule 9     args_decl -> T PIDENTIFIER
Rule 10    args_decl -> empty
Rule 11    main -> PROGRAM IS declarations IN commands END
Rule 12    main -> PROGRAM IS IN commands END
Rule 13    declarations -> declarations COMMA PIDENTIFIER
Rule 14    declarations -> declarations COMMA PIDENTIFIER LBRACKET NUM COLON NUM RBRACKET
Rule 15    declarations -> PIDENTIFIER
Rule 16    declarations -> PIDENTIFIER LBRACKET NUM COLON NUM RBRACKET
Rule 17    commands -> commands command
Rule 18    commands -> command
Rule 19    command -> identifier ASSIGN expression SEMICOLON
Rule 20    command -> IF condition THEN commands ELSE commands ENDIF
Rule 21    command -> IF condition THEN commands ENDIF
Rule 22    command -> WHILE condition DO commands ENDWHILE
Rule 23    command -> REPEAT commands UNTIL condition SEMICOLON
Rule 24    command -> FOR PIDENTIFIER FROM value TO value DO commands ENDFOR
Rule 25    command -> FOR PIDENTIFIER FROM value DOWNTO value DO commands ENDFOR
Rule 26    command -> proc_call SEMICOLON
Rule 27    command -> READ identifier SEMICOLON
Rule 28    command -> WRITE value SEMICOLON
Rule 29    proc_call -> PIDENTIFIER LPAREN args RPAREN
Rule 30    args -> args COMMA PIDENTIFIER
Rule 31    args -> PIDENTIFIER
Rule 32    expression -> value PLUS value
Rule 33    expression -> value MINUS value
Rule 34    expression -> value TIMES value
Rule 35    expression -> value DIV value
Rule 36    expression -> value MOD value
Rule 37    expression -> value
Rule 38    condition -> value EQ value
Rule 39    condition -> value NEQ value
Rule 40    condition -> value LT value
Rule 41    condition -> value GT value
Rule 42    condition -> value LEQ value
Rule 43    condition -> value GEQ value
Rule 44    value -> NUM
Rule 45    value -> identifier
Rule 46    identifier -> PIDENTIFIER
Rule 47    identifier -> PIDENTIFIER LBRACKET PIDENTIFIER RBRACKET
Rule 48    identifier -> PIDENTIFIER LBRACKET NUM RBRACKET
Rule 49    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 19
COLON                : 14 16
COMMA                : 6 7 13 14 30
DIV                  : 35
DO                   : 22 24 25
DOWNTO               : 25
ELSE                 : 20
END                  : 2 3 11 12
ENDFOR               : 24 25
ENDIF                : 20 21
ENDWHILE             : 22
EQ                   : 38
FOR                  : 24 25
FROM                 : 24 25
GEQ                  : 43
GT                   : 41
IF                   : 20 21
IN                   : 2 3 11 12
IS                   : 2 3 11 12
LBRACKET             : 14 16 47 48
LEQ                  : 42
LPAREN               : 5 29
LT                   : 40
MINUS                : 33
MOD                  : 36
NEQ                  : 39
NUM                  : 14 14 16 16 44 48
PIDENTIFIER          : 5 6 7 8 9 13 14 15 16 24 25 29 30 31 46 47 47 48
PLUS                 : 32
PROCEDURE            : 2 3
PROGRAM              : 11 12
RBRACKET             : 14 16 47 48
READ                 : 27
REPEAT               : 23
RPAREN               : 5 29
SEMICOLON            : 19 23 26 27 28
T                    : 7 9
THEN                 : 20 21
TIMES                : 34
TO                   : 24
UNTIL                : 23
WHILE                : 22
WRITE                : 28
error                : 

Nonterminals, with rules where they appear

args                 : 29 30
args_decl            : 5 6 7
command              : 17 18
commands             : 2 3 11 12 17 20 20 21 22 23 24 25
condition            : 20 21 22 23
declarations         : 2 11 13 14
empty                : 4 10
expression           : 19
identifier           : 19 27 45
main                 : 1
proc_call            : 26
proc_head            : 2 3
procedures           : 1 2 3
program_all          : 0
value                : 24 24 25 25 28 32 32 33 33 34 34 35 35 36 36 37 38 38 39 39 40 40 41 41 42 42 43 43

Parsing method: LALR

state 0

    (0) S' -> . program_all
    (1) program_all -> . procedures main
    (2) procedures -> . procedures PROCEDURE proc_head IS declarations IN commands END
    (3) procedures -> . procedures PROCEDURE proc_head IS IN commands END
    (4) procedures -> . empty
    (49) empty -> .

    PROCEDURE       reduce using rule 49 (empty -> .)
    PROGRAM         reduce using rule 49 (empty -> .)

    program_all                    shift and go to state 1
    procedures                     shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> program_all .



state 2

    (1) program_all -> procedures . main
    (2) procedures -> procedures . PROCEDURE proc_head IS declarations IN commands END
    (3) procedures -> procedures . PROCEDURE proc_head IS IN commands END
    (11) main -> . PROGRAM IS declarations IN commands END
    (12) main -> . PROGRAM IS IN commands END

    PROCEDURE       shift and go to state 5
    PROGRAM         shift and go to state 6

    main                           shift and go to state 4

state 3

    (4) procedures -> empty .

    PROCEDURE       reduce using rule 4 (procedures -> empty .)
    PROGRAM         reduce using rule 4 (procedures -> empty .)


state 4

    (1) program_all -> procedures main .

    $end            reduce using rule 1 (program_all -> procedures main .)


state 5

    (2) procedures -> procedures PROCEDURE . proc_head IS declarations IN commands END
    (3) procedures -> procedures PROCEDURE . proc_head IS IN commands END
    (5) proc_head -> . PIDENTIFIER LPAREN args_decl RPAREN

    PIDENTIFIER     shift and go to state 8

    proc_head                      shift and go to state 7

state 6

    (11) main -> PROGRAM . IS declarations IN commands END
    (12) main -> PROGRAM . IS IN commands END

    IS              shift and go to state 9


state 7

    (2) procedures -> procedures PROCEDURE proc_head . IS declarations IN commands END
    (3) procedures -> procedures PROCEDURE proc_head . IS IN commands END

    IS              shift and go to state 10


state 8

    (5) proc_head -> PIDENTIFIER . LPAREN args_decl RPAREN

    LPAREN          shift and go to state 11


state 9

    (11) main -> PROGRAM IS . declarations IN commands END
    (12) main -> PROGRAM IS . IN commands END
    (13) declarations -> . declarations COMMA PIDENTIFIER
    (14) declarations -> . declarations COMMA PIDENTIFIER LBRACKET NUM COLON NUM RBRACKET
    (15) declarations -> . PIDENTIFIER
    (16) declarations -> . PIDENTIFIER LBRACKET NUM COLON NUM RBRACKET

    IN              shift and go to state 13
    PIDENTIFIER     shift and go to state 14

    declarations                   shift and go to state 12

state 10

    (2) procedures -> procedures PROCEDURE proc_head IS . declarations IN commands END
    (3) procedures -> procedures PROCEDURE proc_head IS . IN commands END
    (13) declarations -> . declarations COMMA PIDENTIFIER
    (14) declarations -> . declarations COMMA PIDENTIFIER LBRACKET NUM COLON NUM RBRACKET
    (15) declarations -> . PIDENTIFIER
    (16) declarations -> . PIDENTIFIER LBRACKET NUM COLON NUM RBRACKET

    IN              shift and go to state 16
    PIDENTIFIER     shift and go to state 14

    declarations                   shift and go to state 15

state 11

    (5) proc_head -> PIDENTIFIER LPAREN . args_decl RPAREN
    (6) args_decl -> . args_decl COMMA PIDENTIFIER
    (7) args_decl -> . args_decl COMMA T PIDENTIFIER
    (8) args_decl -> . PIDENTIFIER
    (9) args_decl -> . T PIDENTIFIER
    (10) args_decl -> . empty
    (49) empty -> .

    PIDENTIFIER     shift and go to state 17
    T               shift and go to state 19
    RPAREN          reduce using rule 49 (empty -> .)
    COMMA           reduce using rule 49 (empty -> .)

    args_decl                      shift and go to state 18
    empty                          shift and go to state 20

state 12

    (11) main -> PROGRAM IS declarations . IN commands END
    (13) declarations -> declarations . COMMA PIDENTIFIER
    (14) declarations -> declarations . COMMA PIDENTIFIER LBRACKET NUM COLON NUM RBRACKET

    IN              shift and go to state 21
    COMMA           shift and go to state 22


state 13

    (12) main -> PROGRAM IS IN . commands END
    (17) commands -> . commands command
    (18) commands -> . command
    (19) command -> . identifier ASSIGN expression SEMICOLON
    (20) command -> . IF condition THEN commands ELSE commands ENDIF
    (21) command -> . IF condition THEN commands ENDIF
    (22) command -> . WHILE condition DO commands ENDWHILE
    (23) command -> . REPEAT commands UNTIL condition SEMICOLON
    (24) command -> . FOR PIDENTIFIER FROM value TO value DO commands ENDFOR
    (25) command -> . FOR PIDENTIFIER FROM value DOWNTO value DO commands ENDFOR
    (26) command -> . proc_call SEMICOLON
    (27) command -> . READ identifier SEMICOLON
    (28) command -> . WRITE value SEMICOLON
    (46) identifier -> . PIDENTIFIER
    (47) identifier -> . PIDENTIFIER LBRACKET PIDENTIFIER RBRACKET
    (48) identifier -> . PIDENTIFIER LBRACKET NUM RBRACKET
    (29) proc_call -> . PIDENTIFIER LPAREN args RPAREN

    IF              shift and go to state 26
    WHILE           shift and go to state 27
    REPEAT          shift and go to state 28
    FOR             shift and go to state 29
    READ            shift and go to state 32
    WRITE           shift and go to state 33
    PIDENTIFIER     shift and go to state 30

    commands                       shift and go to state 23
    command                        shift and go to state 24
    identifier                     shift and go to state 25
    proc_call                      shift and go to state 31

state 14

    (15) declarations -> PIDENTIFIER .
    (16) declarations -> PIDENTIFIER . LBRACKET NUM COLON NUM RBRACKET

    IN              reduce using rule 15 (declarations -> PIDENTIFIER .)
    COMMA           reduce using rule 15 (declarations -> PIDENTIFIER .)
    LBRACKET        shift and go to state 34


state 15

    (2) procedures -> procedures PROCEDURE proc_head IS declarations . IN commands END
    (13) declarations -> declarations . COMMA PIDENTIFIER
    (14) declarations -> declarations . COMMA PIDENTIFIER LBRACKET NUM COLON NUM RBRACKET

    IN              shift and go to state 35
    COMMA           shift and go to state 22


state 16

    (3) procedures -> procedures PROCEDURE proc_head IS IN . commands END
    (17) commands -> . commands command
    (18) commands -> . command
    (19) command -> . identifier ASSIGN expression SEMICOLON
    (20) command -> . IF condition THEN commands ELSE commands ENDIF
    (21) command -> . IF condition THEN commands ENDIF
    (22) command -> . WHILE condition DO commands ENDWHILE
    (23) command -> . REPEAT commands UNTIL condition SEMICOLON
    (24) command -> . FOR PIDENTIFIER FROM value TO value DO commands ENDFOR
    (25) command -> . FOR PIDENTIFIER FROM value DOWNTO value DO commands ENDFOR
    (26) command -> . proc_call SEMICOLON
    (27) command -> . READ identifier SEMICOLON
    (28) command -> . WRITE value SEMICOLON
    (46) identifier -> . PIDENTIFIER
    (47) identifier -> . PIDENTIFIER LBRACKET PIDENTIFIER RBRACKET
    (48) identifier -> . PIDENTIFIER LBRACKET NUM RBRACKET
    (29) proc_call -> . PIDENTIFIER LPAREN args RPAREN

    IF              shift and go to state 26
    WHILE           shift and go to state 27
    REPEAT          shift and go to state 28
    FOR             shift and go to state 29
    READ            shift and go to state 32
    WRITE           shift and go to state 33
    PIDENTIFIER     shift and go to state 30

    commands                       shift and go to state 36
    command                        shift and go to state 24
    identifier                     shift and go to state 25
    proc_call                      shift and go to state 31

state 17

    (8) args_decl -> PIDENTIFIER .

    RPAREN          reduce using rule 8 (args_decl -> PIDENTIFIER .)
    COMMA           reduce using rule 8 (args_decl -> PIDENTIFIER .)


state 18

    (5) proc_head -> PIDENTIFIER LPAREN args_decl . RPAREN
    (6) args_decl -> args_decl . COMMA PIDENTIFIER
    (7) args_decl -> args_decl . COMMA T PIDENTIFIER

    RPAREN          shift and go to state 37
    COMMA           shift and go to state 38


state 19

    (9) args_decl -> T . PIDENTIFIER

    PIDENTIFIER     shift and go to state 39


state 20

    (10) args_decl -> empty .

    RPAREN          reduce using rule 10 (args_decl -> empty .)
    COMMA           reduce using rule 10 (args_decl -> empty .)


state 21

    (11) main -> PROGRAM IS declarations IN . commands END
    (17) commands -> . commands command
    (18) commands -> . command
    (19) command -> . identifier ASSIGN expression SEMICOLON
    (20) command -> . IF condition THEN commands ELSE commands ENDIF
    (21) command -> . IF condition THEN commands ENDIF
    (22) command -> . WHILE condition DO commands ENDWHILE
    (23) command -> . REPEAT commands UNTIL condition SEMICOLON
    (24) command -> . FOR PIDENTIFIER FROM value TO value DO commands ENDFOR
    (25) command -> . FOR PIDENTIFIER FROM value DOWNTO value DO commands ENDFOR
    (26) command -> . proc_call SEMICOLON
    (27) command -> . READ identifier SEMICOLON
    (28) command -> . WRITE value SEMICOLON
    (46) identifier -> . PIDENTIFIER
    (47) identifier -> . PIDENTIFIER LBRACKET PIDENTIFIER RBRACKET
    (48) identifier -> . PIDENTIFIER LBRACKET NUM RBRACKET
    (29) proc_call -> . PIDENTIFIER LPAREN args RPAREN

    IF              shift and go to state 26
    WHILE           shift and go to state 27
    REPEAT          shift and go to state 28
    FOR             shift and go to state 29
    READ            shift and go to state 32
    WRITE           shift and go to state 33
    PIDENTIFIER     shift and go to state 30

    commands                       shift and go to state 40
    command                        shift and go to state 24
    identifier                     shift and go to state 25
    proc_call                      shift and go to state 31

state 22

    (13) declarations -> declarations COMMA . PIDENTIFIER
    (14) declarations -> declarations COMMA . PIDENTIFIER LBRACKET NUM COLON NUM RBRACKET

    PIDENTIFIER     shift and go to state 41


state 23

    (12) main -> PROGRAM IS IN commands . END
    (17) commands -> commands . command
    (19) command -> . identifier ASSIGN expression SEMICOLON
    (20) command -> . IF condition THEN commands ELSE commands ENDIF
    (21) command -> . IF condition THEN commands ENDIF
    (22) command -> . WHILE condition DO commands ENDWHILE
    (23) command -> . REPEAT commands UNTIL condition SEMICOLON
    (24) command -> . FOR PIDENTIFIER FROM value TO value DO commands ENDFOR
    (25) command -> . FOR PIDENTIFIER FROM value DOWNTO value DO commands ENDFOR
    (26) command -> . proc_call SEMICOLON
    (27) command -> . READ identifier SEMICOLON
    (28) command -> . WRITE value SEMICOLON
    (46) identifier -> . PIDENTIFIER
    (47) identifier -> . PIDENTIFIER LBRACKET PIDENTIFIER RBRACKET
    (48) identifier -> . PIDENTIFIER LBRACKET NUM RBRACKET
    (29) proc_call -> . PIDENTIFIER LPAREN args RPAREN

    END             shift and go to state 42
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    REPEAT          shift and go to state 28
    FOR             shift and go to state 29
    READ            shift and go to state 32
    WRITE           shift and go to state 33
    PIDENTIFIER     shift and go to state 30

    command                        shift and go to state 43
    identifier                     shift and go to state 25
    proc_call                      shift and go to state 31

state 24

    (18) commands -> command .

    END             reduce using rule 18 (commands -> command .)
    IF              reduce using rule 18 (commands -> command .)
    WHILE           reduce using rule 18 (commands -> command .)
    REPEAT          reduce using rule 18 (commands -> command .)
    FOR             reduce using rule 18 (commands -> command .)
    READ            reduce using rule 18 (commands -> command .)
    WRITE           reduce using rule 18 (commands -> command .)
    PIDENTIFIER     reduce using rule 18 (commands -> command .)
    UNTIL           reduce using rule 18 (commands -> command .)
    ELSE            reduce using rule 18 (commands -> command .)
    ENDIF           reduce using rule 18 (commands -> command .)
    ENDWHILE        reduce using rule 18 (commands -> command .)
    ENDFOR          reduce using rule 18 (commands -> command .)


state 25

    (19) command -> identifier . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 44


state 26

    (20) command -> IF . condition THEN commands ELSE commands ENDIF
    (21) command -> IF . condition THEN commands ENDIF
    (38) condition -> . value EQ value
    (39) condition -> . value NEQ value
    (40) condition -> . value LT value
    (41) condition -> . value GT value
    (42) condition -> . value LEQ value
    (43) condition -> . value GEQ value
    (44) value -> . NUM
    (45) value -> . identifier
    (46) identifier -> . PIDENTIFIER
    (47) identifier -> . PIDENTIFIER LBRACKET PIDENTIFIER RBRACKET
    (48) identifier -> . PIDENTIFIER LBRACKET NUM RBRACKET

    NUM             shift and go to state 47
    PIDENTIFIER     shift and go to state 49

    condition                      shift and go to state 45
    value                          shift and go to state 46
    identifier                     shift and go to state 48

state 27

    (22) command -> WHILE . condition DO commands ENDWHILE
    (38) condition -> . value EQ value
    (39) condition -> . value NEQ value
    (40) condition -> . value LT value
    (41) condition -> . value GT value
    (42) condition -> . value LEQ value
    (43) condition -> . value GEQ value
    (44) value -> . NUM
    (45) value -> . identifier
    (46) identifier -> . PIDENTIFIER
    (47) identifier -> . PIDENTIFIER LBRACKET PIDENTIFIER RBRACKET
    (48) identifier -> . PIDENTIFIER LBRACKET NUM RBRACKET

    NUM             shift and go to state 47
    PIDENTIFIER     shift and go to state 49

    condition                      shift and go to state 50
    value                          shift and go to state 46
    identifier                     shift and go to state 48

state 28

    (23) command -> REPEAT . commands UNTIL condition SEMICOLON
    (17) commands -> . commands command
    (18) commands -> . command
    (19) command -> . identifier ASSIGN expression SEMICOLON
    (20) command -> . IF condition THEN commands ELSE commands ENDIF
    (21) command -> . IF condition THEN commands ENDIF
    (22) command -> . WHILE condition DO commands ENDWHILE
    (23) command -> . REPEAT commands UNTIL condition SEMICOLON
    (24) command -> . FOR PIDENTIFIER FROM value TO value DO commands ENDFOR
    (25) command -> . FOR PIDENTIFIER FROM value DOWNTO value DO commands ENDFOR
    (26) command -> . proc_call SEMICOLON
    (27) command -> . READ identifier SEMICOLON
    (28) command -> . WRITE value SEMICOLON
    (46) identifier -> . PIDENTIFIER
    (47) identifier -> . PIDENTIFIER LBRACKET PIDENTIFIER RBRACKET
    (48) identifier -> . PIDENTIFIER LBRACKET NUM RBRACKET
    (29) proc_call -> . PIDENTIFIER LPAREN args RPAREN

    IF              shift and go to state 26
    WHILE           shift and go to state 27
    REPEAT          shift and go to state 28
    FOR             shift and go to state 29
    READ            shift and go to state 32
    WRITE           shift and go to state 33
    PIDENTIFIER     shift and go to state 30

    commands                       shift and go to state 51
    command                        shift and go to state 24
    identifier                     shift and go to state 25
    proc_call                      shift and go to state 31

state 29

    (24) command -> FOR . PIDENTIFIER FROM value TO value DO commands ENDFOR
    (25) command -> FOR . PIDENTIFIER FROM value DOWNTO value DO commands ENDFOR

    PIDENTIFIER     shift and go to state 52


state 30

    (46) identifier -> PIDENTIFIER .
    (47) identifier -> PIDENTIFIER . LBRACKET PIDENTIFIER RBRACKET
    (48) identifier -> PIDENTIFIER . LBRACKET NUM RBRACKET
    (29) proc_call -> PIDENTIFIER . LPAREN args RPAREN

    ASSIGN          reduce using rule 46 (identifier -> PIDENTIFIER .)
    LBRACKET        shift and go to state 53
    LPAREN          shift and go to state 54


state 31

    (26) command -> proc_call . SEMICOLON

    SEMICOLON       shift and go to state 55


state 32

    (27) command -> READ . identifier SEMICOLON
    (46) identifier -> . PIDENTIFIER
    (47) identifier -> . PIDENTIFIER LBRACKET PIDENTIFIER RBRACKET
    (48) identifier -> . PIDENTIFIER LBRACKET NUM RBRACKET

    PIDENTIFIER     shift and go to state 49

    identifier                     shift and go to state 56

state 33

    (28) command -> WRITE . value SEMICOLON
    (44) value -> . NUM
    (45) value -> . identifier
    (46) identifier -> . PIDENTIFIER
    (47) identifier -> . PIDENTIFIER LBRACKET PIDENTIFIER RBRACKET
    (48) identifier -> . PIDENTIFIER LBRACKET NUM RBRACKET

    NUM             shift and go to state 47
    PIDENTIFIER     shift and go to state 49

    value                          shift and go to state 57
    identifier                     shift and go to state 48

state 34

    (16) declarations -> PIDENTIFIER LBRACKET . NUM COLON NUM RBRACKET

    NUM             shift and go to state 58


state 35

    (2) procedures -> procedures PROCEDURE proc_head IS declarations IN . commands END
    (17) commands -> . commands command
    (18) commands -> . command
    (19) command -> . identifier ASSIGN expression SEMICOLON
    (20) command -> . IF condition THEN commands ELSE commands ENDIF
    (21) command -> . IF condition THEN commands ENDIF
    (22) command -> . WHILE condition DO commands ENDWHILE
    (23) command -> . REPEAT commands UNTIL condition SEMICOLON
    (24) command -> . FOR PIDENTIFIER FROM value TO value DO commands ENDFOR
    (25) command -> . FOR PIDENTIFIER FROM value DOWNTO value DO commands ENDFOR
    (26) command -> . proc_call SEMICOLON
    (27) command -> . READ identifier SEMICOLON
    (28) command -> . WRITE value SEMICOLON
    (46) identifier -> . PIDENTIFIER
    (47) identifier -> . PIDENTIFIER LBRACKET PIDENTIFIER RBRACKET
    (48) identifier -> . PIDENTIFIER LBRACKET NUM RBRACKET
    (29) proc_call -> . PIDENTIFIER LPAREN args RPAREN

    IF              shift and go to state 26
    WHILE           shift and go to state 27
    REPEAT          shift and go to state 28
    FOR             shift and go to state 29
    READ            shift and go to state 32
    WRITE           shift and go to state 33
    PIDENTIFIER     shift and go to state 30

    commands                       shift and go to state 59
    command                        shift and go to state 24
    identifier                     shift and go to state 25
    proc_call                      shift and go to state 31

state 36

    (3) procedures -> procedures PROCEDURE proc_head IS IN commands . END
    (17) commands -> commands . command
    (19) command -> . identifier ASSIGN expression SEMICOLON
    (20) command -> . IF condition THEN commands ELSE commands ENDIF
    (21) command -> . IF condition THEN commands ENDIF
    (22) command -> . WHILE condition DO commands ENDWHILE
    (23) command -> . REPEAT commands UNTIL condition SEMICOLON
    (24) command -> . FOR PIDENTIFIER FROM value TO value DO commands ENDFOR
    (25) command -> . FOR PIDENTIFIER FROM value DOWNTO value DO commands ENDFOR
    (26) command -> . proc_call SEMICOLON
    (27) command -> . READ identifier SEMICOLON
    (28) command -> . WRITE value SEMICOLON
    (46) identifier -> . PIDENTIFIER
    (47) identifier -> . PIDENTIFIER LBRACKET PIDENTIFIER RBRACKET
    (48) identifier -> . PIDENTIFIER LBRACKET NUM RBRACKET
    (29) proc_call -> . PIDENTIFIER LPAREN args RPAREN

    END             shift and go to state 60
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    REPEAT          shift and go to state 28
    FOR             shift and go to state 29
    READ            shift and go to state 32
    WRITE           shift and go to state 33
    PIDENTIFIER     shift and go to state 30

    command                        shift and go to state 43
    identifier                     shift and go to state 25
    proc_call                      shift and go to state 31

state 37

    (5) proc_head -> PIDENTIFIER LPAREN args_decl RPAREN .

    IS              reduce using rule 5 (proc_head -> PIDENTIFIER LPAREN args_decl RPAREN .)


state 38

    (6) args_decl -> args_decl COMMA . PIDENTIFIER
    (7) args_decl -> args_decl COMMA . T PIDENTIFIER

    PIDENTIFIER     shift and go to state 61
    T               shift and go to state 62


state 39

    (9) args_decl -> T PIDENTIFIER .

    RPAREN          reduce using rule 9 (args_decl -> T PIDENTIFIER .)
    COMMA           reduce using rule 9 (args_decl -> T PIDENTIFIER .)


state 40

    (11) main -> PROGRAM IS declarations IN commands . END
    (17) commands -> commands . command
    (19) command -> . identifier ASSIGN expression SEMICOLON
    (20) command -> . IF condition THEN commands ELSE commands ENDIF
    (21) command -> . IF condition THEN commands ENDIF
    (22) command -> . WHILE condition DO commands ENDWHILE
    (23) command -> . REPEAT commands UNTIL condition SEMICOLON
    (24) command -> . FOR PIDENTIFIER FROM value TO value DO commands ENDFOR
    (25) command -> . FOR PIDENTIFIER FROM value DOWNTO value DO commands ENDFOR
    (26) command -> . proc_call SEMICOLON
    (27) command -> . READ identifier SEMICOLON
    (28) command -> . WRITE value SEMICOLON
    (46) identifier -> . PIDENTIFIER
    (47) identifier -> . PIDENTIFIER LBRACKET PIDENTIFIER RBRACKET
    (48) identifier -> . PIDENTIFIER LBRACKET NUM RBRACKET
    (29) proc_call -> . PIDENTIFIER LPAREN args RPAREN

    END             shift and go to state 63
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    REPEAT          shift and go to state 28
    FOR             shift and go to state 29
    READ            shift and go to state 32
    WRITE           shift and go to state 33
    PIDENTIFIER     shift and go to state 30

    command                        shift and go to state 43
    identifier                     shift and go to state 25
    proc_call                      shift and go to state 31

state 41

    (13) declarations -> declarations COMMA PIDENTIFIER .
    (14) declarations -> declarations COMMA PIDENTIFIER . LBRACKET NUM COLON NUM RBRACKET

    IN              reduce using rule 13 (declarations -> declarations COMMA PIDENTIFIER .)
    COMMA           reduce using rule 13 (declarations -> declarations COMMA PIDENTIFIER .)
    LBRACKET        shift and go to state 64


state 42

    (12) main -> PROGRAM IS IN commands END .

    $end            reduce using rule 12 (main -> PROGRAM IS IN commands END .)


state 43

    (17) commands -> commands command .

    END             reduce using rule 17 (commands -> commands command .)
    IF              reduce using rule 17 (commands -> commands command .)
    WHILE           reduce using rule 17 (commands -> commands command .)
    REPEAT          reduce using rule 17 (commands -> commands command .)
    FOR             reduce using rule 17 (commands -> commands command .)
    READ            reduce using rule 17 (commands -> commands command .)
    WRITE           reduce using rule 17 (commands -> commands command .)
    PIDENTIFIER     reduce using rule 17 (commands -> commands command .)
    UNTIL           reduce using rule 17 (commands -> commands command .)
    ELSE            reduce using rule 17 (commands -> commands command .)
    ENDIF           reduce using rule 17 (commands -> commands command .)
    ENDWHILE        reduce using rule 17 (commands -> commands command .)
    ENDFOR          reduce using rule 17 (commands -> commands command .)


state 44
